--- a/.github/workflows/daily_3350_short_data_aggregator.yml
+++ b/.github/workflows/daily_3350_short_data_aggregator.yml
@@ -2,7 +2,7 @@ name: Run Jupyter Notebook Daily
 
 on:
   schedule:
-    - cron: '0 17 * * *' # Runs every day at 9:00 PST
+    - cron: '0 10 * * *' # Runs every day at 2:00 AM PST
   workflow_dispatch:     # Allows manual trigger from GitHub UI
 
 jobs:
