--- a/.github/workflows/daily_3350_short_data_aggregator.yml
+++ b/.github/workflows/daily_3350_short_data_aggregator.yml
@@ -2,7 +2,7 @@ name: Run Jupyter Notebook Daily
 
 on:
   schedule:
-    - cron: '30 9 * * *' # Runs every day at 2:30 AM PST
+    - cron: '5 10 * * *' # Runs every day at 3;05 AM PST
   workflow_dispatch:     # Allows manual trigger from GitHub UI
 
 jobs:
