--- a/.github/workflows/daily_3350_short_data_aggregator.yml
+++ b/.github/workflows/daily_3350_short_data_aggregator.yml
@@ -2,7 +2,7 @@ name: Run Jupyter Notebook Daily
 
 on:
   schedule:
-    - cron: '5 10 * * 1-5' # Runs every mon-fri at 3:05 AM PST
+    - cron: '30 8 * * 1-5' # Runs every mon-fri at 1:30 AM PDT
   workflow_dispatch:     # Allows manual trigger from GitHub UI
 
 jobs:
